[gd_scene load_steps=63 format=3 uid="uid://35giwndd6jyg"]

[ext_resource type="PackedScene" uid="uid://clc5dre31iskm" path="res://addons/godot-xr-tools/xr/start_xr.tscn" id="1_h7q6n"]
[ext_resource type="PackedScene" uid="uid://nqiyqnx42m61" path="res://addons/godot-xr-tools/hands/scenes/highpoly/left_fullglove_physics_hand.tscn" id="1_jdw8j"]
[ext_resource type="Script" path="res://main.gd" id="1_kui4x"]
[ext_resource type="PackedScene" uid="uid://cigx2gnf4tg4d" path="res://addons/godot-xr-tools/hands/scenes/highpoly/right_fullglove_physics_hand.tscn" id="2_2tsdc"]
[ext_resource type="Script" path="res://xrorigin3d.gd" id="2_40uyp"]
[ext_resource type="PackedScene" uid="uid://ctltchlf2j2r4" path="res://addons/xr-simulator/XRSimulator.tscn" id="2_j1dfe"]
[ext_resource type="PackedScene" uid="uid://wtpox7m5vu2b" path="res://addons/godot-xr-tools/effects/fade.tscn" id="4_qado1"]
[ext_resource type="Shader" path="res://assets/hand.gdshader" id="6_0tc6y"]
[ext_resource type="Script" path="res://audio_stream_microphone.gd" id="6_fvnxd"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="7_6l8go"]
[ext_resource type="PackedScene" uid="uid://bufelcry36rw1" path="res://addons/xr-autohandtracker/auto_handtracker.tscn" id="8_3wn4n"]
[ext_resource type="Script" path="res://nosesequence.gd" id="8_4i5py"]
[ext_resource type="Script" path="res://handcentre.gd" id="9_h6jwr"]
[ext_resource type="Material" uid="uid://b7jevbvo6ebp2" path="res://assets/monkeyshadertop.tres" id="10_pb306"]
[ext_resource type="Material" uid="uid://dg4lqg6r354f3" path="res://floorwater.tres" id="12_efw08"]
[ext_resource type="Script" path="res://scenesequence.gd" id="13_v0v6l"]
[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="14_fsmsi"]
[ext_resource type="Script" path="res://introscene.gd" id="14_i85se"]
[ext_resource type="PackedScene" uid="uid://bqumugyvkct4r" path="res://addons/godot-xr-tools/staging/loading_screen.tscn" id="15_2ueek"]
[ext_resource type="Texture2D" uid="uid://cnwdeeti3ya0q" path="res://assets/godot/splash.png" id="16_ae51a"]
[ext_resource type="AudioStream" uid="uid://bqd0iemxvu32x" path="res://assets/Audio/downtown-traffic-and-crowd-noises-14734_trimmed.mp3" id="17_equb6"]
[ext_resource type="Script" path="res://pondscene.gd" id="18_6nfk3"]
[ext_resource type="AudioStream" uid="uid://bvhcg66bwlukf" path="res://assets/Audio/tranquilness-ambient-healing-music-meditation-yoga-zen-112329_trimmed.mp3" id="20_cm5tj"]
[ext_resource type="AudioStream" uid="uid://cllsj2x5kwanq" path="res://assets/Audio/happy-pop-2-185287.mp3" id="21_tt50e"]
[ext_resource type="PackedScene" uid="uid://umn00ymb26vq" path="res://assets/Apartment.glb" id="22_m1vp1"]
[ext_resource type="PackedScene" uid="uid://bcsm3p1j8408h" path="res://assets/Monkey_Rigged--Animated_01a.glb" id="22_qh1ro"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q40q2"]
albedo_color = Color(0.323179, 0.322995, 0, 1)

[sub_resource type="PrismMesh" id="PrismMesh_2gmlt"]
material = SubResource("StandardMaterial3D_q40q2")
size = Vector3(0.01, 0.01, 0.01)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f8r2u"]
render_priority = 0
shader = ExtResource("6_0tc6y")
shader_parameter/albedo = Color(0.529412, 1, 1, 0.4)
shader_parameter/fade_offset = -0.022
shader_parameter/fade_sharpness = 14.58
shader_parameter/orbcentrerelativetohand = Vector3(0, 0, 0)
shader_parameter/orbrad = 0.0
shader_parameter/orbbrightcolour = Color(1, 0, 0, 0.9)
shader_parameter/orbdropoff = 0.02

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k1loc"]
render_priority = 0
shader = ExtResource("6_0tc6y")
shader_parameter/albedo = Color(0.529412, 1, 1, 0.4)
shader_parameter/fade_offset = -0.022
shader_parameter/fade_sharpness = 14.58
shader_parameter/orbcentrerelativetohand = Vector3(0, 0, 0)
shader_parameter/orbrad = 0.0
shader_parameter/orbbrightcolour = Color(1, 0, 0, 0.9)
shader_parameter/orbdropoff = 0.02

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_owage"]
albedo_color = Color(0.0745098, 1, 0.00392157, 1)

[sub_resource type="BoxMesh" id="BoxMesh_2e45k"]
material = SubResource("StandardMaterial3D_owage")
size = Vector3(0.01, 0.01, 0.01)

[sub_resource type="CylinderMesh" id="CylinderMesh_1yfks"]
top_radius = 0.002
bottom_radius = 0.02
height = 0.1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ld7ix"]
direction = Vector3(0, 1, 0)
spread = 18.931
initial_velocity_min = 0.3
initial_velocity_max = 1.0
gravity = Vector3(0, -0.4, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ha1q7"]
emission_enabled = true
emission = Color(0, 0.847059, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_2ps3d"]
material = SubResource("StandardMaterial3D_ha1q7")
size = Vector3(0.01, 0.01, 0.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3cfwo"]
emission_enabled = true
emission = Color(0.956863, 0.984314, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_4q2lq"]
material = SubResource("StandardMaterial3D_3cfwo")
top_radius = 0.001
bottom_radius = 0.001
height = 0.02

[sub_resource type="QuadMesh" id="QuadMesh_oc67t"]
material = ExtResource("12_efw08")
size = Vector2(20, 20)
subdivide_width = 100
subdivide_depth = 100

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_68qac"]

[sub_resource type="Sky" id="Sky_sokij"]
sky_material = SubResource("ProceduralSkyMaterial_68qac")

[sub_resource type="Environment" id="Environment_37w8k"]
background_mode = 2
sky = SubResource("Sky_sokij")

[sub_resource type="QuadMesh" id="QuadMesh_lt8sp"]
size = Vector2(3, 1)

[sub_resource type="Shader" id="Shader_yiqj2"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_burley, specular_schlick_ggx;


uniform float multscale = 2.0;
uniform sampler2D voice;

void vertex() {
}

void fragment() {
  ALBEDO = vec3(UV, 0.5);
  vec4 v = texture(voice, UV);
  float s = v.r*multscale;
  float d = UV.y*2.0 - s*0.5 - 1.0;
  //EMISSION = (abs(d) < 0.1 ? vec3(0.8,0.8,0.9) : vec3(0.1,0.1,0.1));
  if (abs(UV.y - 0.5) < abs(s)*0.5)
	EMISSION = vec3(max(s, 0.0), 0.0, max(-s, 0.0));
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xly2v"]
render_priority = 0
shader = SubResource("Shader_yiqj2")
shader_parameter/multscale = 2.0

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_dj88s"]

[sub_resource type="BoxMesh" id="BoxMesh_hnydq"]
size = Vector3(4, 3, 4)

[sub_resource type="BoxMesh" id="BoxMesh_6qs6n"]
size = Vector3(3.5, 3, 3.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_ajhpm"]
radius = 0.15

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dlq50"]
transparency = 1
albedo_color = Color(0.0862745, 1, 1, 0.227451)
metallic = 0.99
roughness = 0.23
rim = 0.01

[sub_resource type="SphereMesh" id="SphereMesh_el520"]
material = SubResource("StandardMaterial3D_dlq50")
radius = 0.15
height = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d15si"]
transparency = 1
albedo_color = Color(0.356863, 1, 1, 0.298039)
metallic = 0.74
roughness = 0.21

[sub_resource type="SphereMesh" id="SphereMesh_4sx7o"]
material = SubResource("StandardMaterial3D_d15si")

[sub_resource type="BoxMesh" id="BoxMesh_5itna"]
size = Vector3(0.2, 0.01, 0.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_karnf"]
albedo_color = Color(1, 1, 0.0745098, 1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jij07"]
animation = &"Arms-3"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_3x83a"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Hand.L", "Armature/Skeleton3D:Hand.R", "Armature/Skeleton3D:LowerArm.L", "Armature/Skeleton3D:LowerArm.R", "Armature/Skeleton3D:UpperArm.L", "Armature/Skeleton3D:UpperArm.R"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pp1pu"]
animation = &"Breathe"

[sub_resource type="AnimationNodeTimeSeek" id="AnimationNodeTimeSeek_3lwol"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_73cgn"]
filter_enabled = true
filters = ["Armature/Skeleton3D/Head_2/Head_2:Blink"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pilhh"]
animation = &"Eyes_open"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_bfef2"]
graph_offset = Vector2(-248.014, -54.2617)
nodes/ArmsOut/node = SubResource("AnimationNodeAnimation_jij07")
nodes/ArmsOut/position = Vector2(-68.5714, 137.143)
nodes/ArmsOutBlend/node = SubResource("AnimationNodeBlend2_3x83a")
nodes/ArmsOutBlend/position = Vector2(251.429, -11.4286)
nodes/Breathe1/node = SubResource("AnimationNodeAnimation_pp1pu")
nodes/Breathe1/position = Vector2(-91.4286, 11.4286)
nodes/BreatheSeek/node = SubResource("AnimationNodeTimeSeek_3lwol")
nodes/BreatheSeek/position = Vector2(68.5714, -11.4286)
nodes/EyesBlend/node = SubResource("AnimationNodeBlend2_73cgn")
nodes/EyesBlend/position = Vector2(445.714, 34.2857)
nodes/EyesOpen/node = SubResource("AnimationNodeAnimation_pilhh")
nodes/EyesOpen/position = Vector2(205.714, 182.857)
nodes/output/position = Vector2(662.857, 91.4286)
node_connections = [&"ArmsOutBlend", 0, &"BreatheSeek", &"ArmsOutBlend", 1, &"ArmsOut", &"BreatheSeek", 0, &"Breathe1", &"EyesBlend", 0, &"ArmsOutBlend", &"EyesBlend", 1, &"EyesOpen", &"output", 0, &"EyesBlend"]

[node name="Main" type="Node3D"]
script = ExtResource("1_kui4x")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
script = ExtResource("2_40uyp")

[node name="StartXR" parent="XROrigin3D" instance=ExtResource("1_h7q6n")]

[node name="XRSimulator" parent="XROrigin3D" instance=ExtResource("2_j1dfe")]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.838471, 0)

[node name="Nose" type="MeshInstance3D" parent="XROrigin3D/XRCamera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0603088, -0.08)
visible = false
mesh = SubResource("PrismMesh_2gmlt")

[node name="NosePointer" type="MeshInstance3D" parent="XROrigin3D/XRCamera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.3)
mesh = SubResource("PrismMesh_2gmlt")

[node name="Fade" parent="XROrigin3D/XRCamera3D" instance=ExtResource("4_qado1")]

[node name="XRController3DLeft" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.672497, 1.00323, -0.89392)
tracker = &"left_hand"

[node name="LeftPhysicsHand" parent="XROrigin3D/XRController3DLeft" instance=ExtResource("1_jdw8j")]
hand_material_override = SubResource("ShaderMaterial_f8r2u")

[node name="FunctionPickup" parent="XROrigin3D/XRController3DLeft" instance=ExtResource("7_6l8go")]

[node name="AutoHandtracker" parent="XROrigin3D/XRController3DLeft" instance=ExtResource("8_3wn4n")]
visiblehandtrackskeleton = false
enableautotracker = false

[node name="XRController3DRight" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.28044, 0.854152, -0.685628)
tracker = &"right_hand"

[node name="RightPhysicsHand" parent="XROrigin3D/XRController3DRight" instance=ExtResource("2_2tsdc")]
hand_material_override = SubResource("ShaderMaterial_k1loc")

[node name="FunctionPickup" parent="XROrigin3D/XRController3DRight" instance=ExtResource("7_6l8go")]

[node name="AutoHandtracker" parent="XROrigin3D/XRController3DRight" instance=ExtResource("8_3wn4n")]
visiblehandtrackskeleton = false
enableautotracker = false

[node name="NoseSequence" type="Node3D" parent="."]
visible = false
script = ExtResource("8_4i5py")

[node name="Spot0" type="MeshInstance3D" parent="NoseSequence"]
mesh = SubResource("BoxMesh_2e45k")

[node name="HandCentre" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.14032, -0.940345)
visible = false
script = ExtResource("9_h6jwr")

[node name="HandPlant" type="MeshInstance3D" parent="HandCentre"]
mesh = SubResource("CylinderMesh_1yfks")

[node name="GPUParticles3D" type="GPUParticles3D" parent="HandCentre"]
amount = 90
lifetime = 5.57
process_material = SubResource("ParticleProcessMaterial_ld7ix")
draw_pass_1 = SubResource("BoxMesh_2ps3d")

[node name="HandMidDebug" type="MeshInstance3D" parent="HandCentre"]
cast_shadow = 0
mesh = SubResource("CylinderMesh_4q2lq")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("QuadMesh_oc67t")
skeleton = NodePath("../XROrigin3D")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_37w8k")

[node name="StillnessLabel3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.948704, -4.09393)
visible = false
text = "Stillness Score"

[node name="StillnessScore" type="Label3D" parent="StillnessLabel3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.275797, -0.00146437)
text = "0.0
"

[node name="NosePointer2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.309518, 0.631985, -1.2)
visible = false
mesh = SubResource("PrismMesh_2gmlt")
skeleton = NodePath("../XROrigin3D/XRCamera3D")

[node name="SceneSequence" type="Node3D" parent="."]
script = ExtResource("13_v0v6l")

[node name="LoadingScreen" parent="SceneSequence" instance=ExtResource("15_2ueek")]
splash_screen = ExtResource("16_ae51a")
enable_press_to_continue = true

[node name="IntroScene" type="Node3D" parent="SceneSequence"]
visible = false
script = ExtResource("14_i85se")

[node name="VoiceGraph" type="MeshInstance3D" parent="SceneSequence/IntroScene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.43615, -1.65542)
visible = false
mesh = SubResource("QuadMesh_lt8sp")
skeleton = NodePath("../../../XROrigin3D")
surface_material_override/0 = SubResource("ShaderMaterial_xly2v")

[node name="AudioStreamMicrophone" type="AudioStreamPlayer" parent="SceneSequence/IntroScene/VoiceGraph"]
stream = SubResource("AudioStreamMicrophone_dj88s")
autoplay = true
bus = &"MicrophoneBus"
script = ExtResource("6_fvnxd")

[node name="CSGMesh3D" type="CSGMesh3D" parent="SceneSequence/IntroScene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
visible = false
mesh = SubResource("BoxMesh_hnydq")

[node name="CSGMesh3D" type="CSGMesh3D" parent="SceneSequence/IntroScene/CSGMesh3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
operation = 2
mesh = SubResource("BoxMesh_6qs6n")

[node name="CSGBox3D" type="CSGBox3D" parent="SceneSequence/IntroScene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.887992)
visible = false
size = Vector3(1, 1, 0.5)

[node name="MonkeyOrb" parent="SceneSequence/IntroScene" instance=ExtResource("14_fsmsi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0512317, 0.79436, -0.787967)
freeze = true

[node name="CollisionShape3D" parent="SceneSequence/IntroScene/MonkeyOrb" index="0"]
shape = SubResource("SphereShape3D_ajhpm")

[node name="Sphere" type="MeshInstance3D" parent="SceneSequence/IntroScene/MonkeyOrb"]
mesh = SubResource("SphereMesh_el520")

[node name="Monkey_Rigged--Animated_01a" parent="SceneSequence/IntroScene/MonkeyOrb/Sphere" instance=ExtResource("22_qh1ro")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, -0.0251299, 0)

[node name="Pop" type="AudioStreamPlayer3D" parent="SceneSequence/IntroScene/MonkeyOrb"]
stream = ExtResource("21_tt50e")

[node name="TrafficSound" type="AudioStreamPlayer3D" parent="SceneSequence/IntroScene/MonkeyOrb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.47271, -0.808694)
stream = ExtResource("17_equb6")

[node name="OmniLight3D" type="OmniLight3D" parent="SceneSequence/IntroScene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15496, 1.35792, 0.0921028)
omni_range = 2.0
omni_attenuation = 2.461

[node name="Apartment" parent="SceneSequence/IntroScene" instance=ExtResource("22_m1vp1")]

[node name="PondScene" type="Node3D" parent="SceneSequence"]
script = ExtResource("18_6nfk3")

[node name="MonkeyTop" parent="SceneSequence/PondScene" instance=ExtResource("22_qh1ro")]
transform = Transform3D(1.99726, 0, -0.104672, 0, 2, 0, 0.104672, 0, 1.99726, -0.1, -0.231, -1.312)

[node name="Skeleton3D" parent="SceneSequence/PondScene/MonkeyTop/Armature" index="0"]
bones/1/rotation = Quaternion(-0.814317, 0.0413054, 0.0248561, 0.578415)
bones/2/rotation = Quaternion(0.143059, -0.00962995, -0.0369904, 0.988976)
bones/3/rotation = Quaternion(0.0367313, -0.00261337, 0.0104498, 0.999267)
bones/5/rotation = Quaternion(-0.305163, 0.0716372, 0.880063, 0.356696)
bones/6/rotation = Quaternion(0.7468, -0.303692, 0.303924, 0.507633)
bones/7/rotation = Quaternion(-0.0726434, -0.0679308, 0.232242, 0.96756)
bones/11/rotation = Quaternion(-0.270716, -0.0585808, -0.869184, 0.409636)
bones/12/rotation = Quaternion(0.757816, 0.231766, -0.173085, 0.584843)
bones/13/rotation = Quaternion(-0.0726434, 0.067931, -0.232242, 0.96756)

[node name="Head_2" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D" index="0"]
transform = Transform3D(0.999183, -0.0403117, -0.00265975, 0.039956, 0.995792, -0.0824706, 0.00597313, 0.0822969, 0.99659, 0.0189597, 0.00308686, -0.0288053)

[node name="Head_2" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D/Head_2" index="0"]
surface_material_override/0 = ExtResource("10_pb306")

[node name="EyeheightSpot" type="MeshInstance3D" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D/Head_2" index="1"]
transform = Transform3D(0.499007, 0.0123071, 0.0289842, -0.0167233, 0.493539, 0.0783509, -0.0266812, -0.0791647, 0.492971, 0.0609884, 0.560998, 0.128368)
mesh = SubResource("BoxMesh_2e45k")
skeleton = NodePath("../../../../../../../NoseSequence")

[node name="EyeprojectedSpot" type="MeshInstance3D" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D/Head_2/EyeheightSpot"]
transform = Transform3D(0.04, 5.82077e-12, -1.86265e-11, -5.82077e-12, 0.04, 2.98023e-10, 1.86265e-11, -2.98023e-10, 0.04, 0, 0, 0.8)
mesh = SubResource("SphereMesh_4sx7o")

[node name="R_Hand" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.198338, -0.261725, 0.944543, 0.461519, 0.875113, 0.145575, -0.864676, 0.40705, 0.294357, -0.0952986, 0.0627632, -0.332207)

[node name="R_LowerArm" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.318957, -0.612417, 0.723334, 0.381614, 0.781588, 0.493464, -0.867548, 0.118641, 0.482996, 0.124199, 0.0113122, -0.251863)

[node name="R_UpperArm" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.556944, -0.511503, -0.654353, 0.714931, 0.696247, 0.0642529, 0.422724, -0.503598, 0.753455, 0.234728, 0.146585, 0.246633)

[node name="L_Hand" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.493395, 0.17193, -0.852645, -0.322471, 0.946578, 0.00426838, 0.807821, 0.272846, 0.522475, 0.123678, 0.0725223, -0.368787)

[node name="L_LowerArm" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D" index="5"]
transform = Transform3D(0.592382, 0.452455, -0.66661, -0.222349, 0.887097, 0.404518, 0.774367, -0.0914073, 0.626099, -0.0628809, -0.0172077, -0.228042)

[node name="L_UpperArm" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D" index="6"]
transform = Transform3D(0.660586, 0.42414, 0.619461, -0.597169, 0.796928, 0.091164, -0.454997, -0.43014, 0.779716, -0.169493, 0.151651, 0.252854)

[node name="Torso" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D" index="7"]
transform = Transform3D(0.999949, -0.0101242, -0.000142543, 0.0100909, 0.997608, -0.0683818, 0.000834521, 0.068377, 0.997659, 0.00335192, 0.00320014, -0.02144)

[node name="Butt_2" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D" index="8"]
transform = Transform3D(1, 1.90921e-08, 1.86265e-08, 2.28174e-08, 0.999944, -0.0106028, -1.72295e-08, 0.0106038, 0.999944, 1.11759e-08, 0.000724569, -0.00240372)

[node name="Base_2" parent="SceneSequence/PondScene/MonkeyTop/Armature/Skeleton3D" index="9"]
transform = Transform3D(1, 1.11413e-11, 1.13047e-11, 1.09139e-11, 1, 5.81145e-07, -9.71312e-12, 5.81145e-07, 1, 0, 1.49012e-08, -2.6077e-08)

[node name="MonkeyBottom" parent="SceneSequence/PondScene" instance=ExtResource("22_qh1ro")]
transform = Transform3D(-1.99726, 1.74606e-07, -0.104672, -1.74846e-07, -2, 0, -0.104672, 9.15071e-09, 1.99726, 0.1, 0.231, -1.312)

[node name="Skeleton3D" parent="SceneSequence/PondScene/MonkeyBottom/Armature" index="0"]
bones/1/rotation = Quaternion(-0.805977, 0.0409463, 0.0254432, 0.58998)
bones/2/rotation = Quaternion(0.210219, -0.0121655, -0.0410064, 0.976718)
bones/3/rotation = Quaternion(0.0539338, -0.00107878, -0.00454239, 0.998534)
bones/5/rotation = Quaternion(-0.314525, 0.0957134, 0.877815, 0.348358)
bones/6/rotation = Quaternion(0.766993, -0.275609, 0.289214, 0.502113)
bones/7/rotation = Quaternion(-0.0726434, -0.0679308, 0.232242, 0.96756)
bones/11/rotation = Quaternion(-0.306283, -0.0849215, -0.860334, 0.398503)
bones/12/rotation = Quaternion(0.792019, 0.208555, -0.172311, 0.547283)
bones/13/rotation = Quaternion(-0.0726434, 0.067931, -0.232242, 0.96756)

[node name="Head_2" parent="SceneSequence/PondScene/MonkeyBottom/Armature/Skeleton3D" index="0"]
transform = Transform3D(1, -8.05521e-08, 1.04774e-08, 1.07335e-07, 0.960541, -0.27814, 1.14087e-08, 0.278137, 0.960541, 4.09782e-08, 0.0266679, -0.0949279)

[node name="R_Hand" parent="SceneSequence/PondScene/MonkeyBottom/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.211066, -0.274055, 0.938267, 0.495744, 0.8573, 0.138887, -0.842432, 0.435824, 0.316805, -0.088086, 0.0824632, -0.333036)

[node name="R_LowerArm" parent="SceneSequence/PondScene/MonkeyBottom/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.33218, -0.618986, 0.711698, 0.416631, 0.77324, 0.478052, -0.846214, 0.137716, 0.51474, 0.130237, 0.0290599, -0.250788)

[node name="R_UpperArm" parent="SceneSequence/PondScene/MonkeyBottom/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.564482, -0.504871, -0.653043, 0.658335, 0.752626, -0.0128031, 0.497958, -0.42269, 0.757213, 0.233034, 0.123487, 0.234254)

[node name="L_Hand" parent="SceneSequence/PondScene/MonkeyBottom/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.470146, 0.178492, -0.864352, -0.323666, 0.945983, 0.0192976, 0.821099, 0.270688, 0.502518, 0.127575, 0.0740842, -0.363541)

[node name="L_LowerArm" parent="SceneSequence/PondScene/MonkeyBottom/Armature/Skeleton3D" index="5"]
transform = Transform3D(0.571238, 0.46652, -0.675312, -0.225118, 0.88027, 0.417685, 0.78931, -0.086571, 0.607862, -0.0633944, -0.0121693, -0.22659)

[node name="L_UpperArm" parent="SceneSequence/PondScene/MonkeyBottom/Armature/Skeleton3D" index="6"]
transform = Transform3D(0.634785, 0.411852, 0.653778, -0.561008, 0.827488, 0.0234275, -0.531342, -0.381642, 0.756324, -0.160811, 0.136005, 0.262059)

[node name="Torso" parent="SceneSequence/PondScene/MonkeyBottom/Armature/Skeleton3D" index="7"]
transform = Transform3D(1, -6.91361e-08, 2.79397e-09, 9.49949e-08, 0.972861, -0.231391, 1.35042e-08, 0.231389, 0.972861, 3.35276e-08, 0.0189043, -0.0713166)

[node name="Butt_2" parent="SceneSequence/PondScene/MonkeyBottom/Armature/Skeleton3D" index="8"]
transform = Transform3D(1, 2.49129e-08, -4.98258e-08, 7.33417e-09, 0.999233, -0.0391442, 4.70318e-08, 0.0391448, 0.999233, 1.11759e-08, 0.00280184, -0.00883631)

[node name="Base_2" parent="SceneSequence/PondScene/MonkeyBottom/Armature/Skeleton3D" index="9"]
transform = Transform3D(1, 1.11413e-11, 1.13047e-11, 1.09139e-11, 1, 5.81145e-07, -9.71312e-12, 5.81145e-07, 1, 0, 1.49012e-08, -2.6077e-08)

[node name="Water" type="MeshInstance3D" parent="SceneSequence/PondScene"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_oc67t")
skeleton = NodePath("../../../XROrigin3D")

[node name="AmbientSound" type="AudioStreamPlayer3D" parent="SceneSequence/PondScene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29473, -2.61914)
stream = ExtResource("20_cm5tj")

[node name="BreathMatch" type="MeshInstance3D" parent="SceneSequence/PondScene"]
transform = Transform3D(0.1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0572135, 1.18364, -1.12137)
mesh = SubResource("BoxMesh_5itna")
surface_material_override/0 = SubResource("StandardMaterial3D_karnf")

[node name="BreathMatchAccum" type="MeshInstance3D" parent="SceneSequence/PondScene"]
transform = Transform3D(0.1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0572135, 1.23735, -1.12137)
mesh = SubResource("BoxMesh_5itna")
surface_material_override/0 = SubResource("StandardMaterial3D_karnf")

[node name="AnimationTree" type="AnimationTree" parent="SceneSequence/PondScene"]
root_node = NodePath("../MonkeyTop")
tree_root = SubResource("AnimationNodeBlendTree_bfef2")
anim_player = NodePath("../MonkeyTop/AnimationPlayer")
parameters/current_length = 8.0
parameters/current_position = 4.40471
parameters/current_delta = 0.023916
parameters/ArmsOut/current_length = 64.0833
parameters/ArmsOut/current_position = 64.0833
parameters/ArmsOut/current_delta = 0.0
parameters/ArmsOutBlend/current_length = 8.0
parameters/ArmsOutBlend/current_position = 4.40471
parameters/ArmsOutBlend/current_delta = 0.023916
parameters/ArmsOutBlend/blend_amount = 0.0
parameters/Breathe1/current_length = 8.0
parameters/Breathe1/current_position = 4.40471
parameters/Breathe1/current_delta = 0.023916
parameters/BreatheSeek/current_length = 8.0
parameters/BreatheSeek/current_position = 4.40471
parameters/BreatheSeek/current_delta = 0.023916
parameters/BreatheSeek/seek_request = -1.0
parameters/EyesBlend/current_length = 8.0
parameters/EyesBlend/current_position = 4.40471
parameters/EyesBlend/current_delta = 0.023916
parameters/EyesBlend/blend_amount = 0.0
parameters/EyesOpen/current_length = 63.9583
parameters/EyesOpen/current_position = 4.86809
parameters/EyesOpen/current_delta = 0.0
parameters/output/current_length = 8.0
parameters/output/current_position = 4.40471
parameters/output/current_delta = 0.023916

[editable path="SceneSequence/IntroScene/MonkeyOrb"]
[editable path="SceneSequence/PondScene/MonkeyTop"]
[editable path="SceneSequence/PondScene/MonkeyBottom"]
